se configuro de forma correcat la api key y se agrego al gitignore pycache/

--- a/dalle2.ipynb
+++ b/dalle2.ipynb
@@ -2,71 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai"
+    "import openai\n",
+    "import creds # with my api key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hola mundo\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hola mundo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "res_peticion = openai.Image.create(\n",
-    "    prompt = \"black with white cat playing with a mouse toy in cartoon style\",\n",
-    "    n=4,\n",
+    "    prompt = \"cat playing inside a box\",\n",
+    "    n=1,\n",
     "    size=\"1024x1024\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject at 0x25777d91010> JSON: {\n",
-       "  \"created\": 1692889843,\n",
+       "<OpenAIObject at 0x1e237064b30> JSON: {\n",
+       "  \"created\": 1692893740,\n",
        "  \"data\": [\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-xoEMGpwR9pJQkAmvyYeLUUw6.png?st=2023-08-24T14%3A10%3A43Z&se=2023-08-24T16%3A10%3A43Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T23%3A01%3A52Z&ske=2023-08-24T23%3A01%3A52Z&sks=b&skv=2021-08-06&sig=QskQpnpQ54LBiNcgLdt7q45xYjaXSY%2BlHDTeBX6blsU%3D\"\n",
-       "    },\n",
-       "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-zWphtJdXdo4TNGZcsA6XmiuW.png?st=2023-08-24T14%3A10%3A42Z&se=2023-08-24T16%3A10%3A42Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T23%3A01%3A52Z&ske=2023-08-24T23%3A01%3A52Z&sks=b&skv=2021-08-06&sig=1nneG3aHRQe0UG1E/49l0XZ2bLuNZE0MsE7vEpBZmYc%3D\"\n",
-       "    },\n",
-       "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-yAEHWmonY5Y1OkCJiVN2r5mV.png?st=2023-08-24T14%3A10%3A42Z&se=2023-08-24T16%3A10%3A42Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T23%3A01%3A52Z&ske=2023-08-24T23%3A01%3A52Z&sks=b&skv=2021-08-06&sig=gBZYQK/D74fWKWQHqh7D/04zN4yFUr4tDGO1sf6t2HI%3D\"\n",
-       "    },\n",
-       "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-lPQnkQfbw3NmbKrZFswf4Sd5.png?st=2023-08-24T14%3A10%3A42Z&se=2023-08-24T16%3A10%3A42Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T23%3A01%3A52Z&ske=2023-08-24T23%3A01%3A52Z&sks=b&skv=2021-08-06&sig=IuBs9rCj5CObL9zb6KtJV7Ezb/KAgIpqUW0EeTHnMzE%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-P90uo8WwidK21PZYGVDmuhva.png?st=2023-08-24T15%3A15%3A40Z&se=2023-08-24T17%3A15%3A40Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T18%3A57%3A49Z&ske=2023-08-24T18%3A57%3A49Z&sks=b&skv=2021-08-06&sig=vmNnAwy6FnURfiD%2B1%2B/wV%2BdovieWVQyIm71yfHaqpzQ%3D\"\n",
        "    }\n",
        "  ]\n",
        "}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
