se agregaron las librerias para la manipulacion de imagenes y se uso para guardar las imagenes generasdas por dalle en variables imagenes y imagenes_url

--- a/dalle2.ipynb
+++ b/dalle2.ipynb
@@ -12,36 +12,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "res_peticion = openai.Image.create(\n",
     "    prompt = \"cat playing inside a box\",\n",
-    "    n=1,\n",
+    "    n=4,\n",
     "    size=\"1024x1024\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject at 0x1e237064b30> JSON: {\n",
-       "  \"created\": 1692893740,\n",
+       "<OpenAIObject at 0x1e2370651f0> JSON: {\n",
+       "  \"created\": 1692895351,\n",
        "  \"data\": [\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-P90uo8WwidK21PZYGVDmuhva.png?st=2023-08-24T15%3A15%3A40Z&se=2023-08-24T17%3A15%3A40Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T18%3A57%3A49Z&ske=2023-08-24T18%3A57%3A49Z&sks=b&skv=2021-08-06&sig=vmNnAwy6FnURfiD%2B1%2B/wV%2BdovieWVQyIm71yfHaqpzQ%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-ogAkQgzDv2JztyLFHNKVls2d.png?st=2023-08-24T15%3A42%3A31Z&se=2023-08-24T17%3A42%3A31Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T19%3A00%3A32Z&ske=2023-08-24T19%3A00%3A32Z&sks=b&skv=2021-08-06&sig=y2Oe/0y4YW4cbj55dMIfV4cnVXrDSKuPm9xuRjY7KKI%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-3KX9JlG7b5NueOwNHGMrLcWx.png?st=2023-08-24T15%3A42%3A31Z&se=2023-08-24T17%3A42%3A31Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T19%3A00%3A32Z&ske=2023-08-24T19%3A00%3A32Z&sks=b&skv=2021-08-06&sig=9q%2BE/BkqJ%2BxGduzFHRlMWo8cIuFLrH4HyDUn492CQXQ%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-RNOuYZfsBtChkJLnX1C9PPrO.png?st=2023-08-24T15%3A42%3A30Z&se=2023-08-24T17%3A42%3A30Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T19%3A00%3A32Z&ske=2023-08-24T19%3A00%3A32Z&sks=b&skv=2021-08-06&sig=UkFwUlyBF/Skw5a5cY3R/XOeM4H/9i%2Be0lB6%2By9gi0c%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-h1F0Mj8bi9V7aBeH88suNOOa.png?st=2023-08-24T15%3A42%3A30Z&se=2023-08-24T17%3A42%3A30Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-23T19%3A00%3A32Z&ske=2023-08-24T19%3A00%3A32Z&sks=b&skv=2021-08-06&sig=ogR6O2RmawD8rB5NnJBZpSgdVJbZ93nU4%2Bk0QLd%2BxEE%3D\"\n",
        "    }\n",
        "  ]\n",
        "}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
