--- a/dalle2.ipynb
+++ b/dalle2.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
-    "import creds # with my api key"
+    "import creds # with my api key\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "import os"
    ]
   },
   {
@@ -57,6 +61,101 @@
    ],
    "source": [
     "res_peticion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(res_peticion[\"data\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imagenes_url = []\n",
+    "imagenes = []\n",
+    "\n",
+    "for i in range(0,len(res_peticion[\"data\"])):\n",
+    "  imagenes_url.append(requests.get(res_peticion[\"data\"][i][\"url\"]))\n",
+    "  imagenes.append(Image.open(BytesIO(imagenes_url[i].content)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Response [200]>, <Response [200]>, <Response [200]>, <Response [200]>]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagenes_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<PIL.PngImagePlugin.PngImageFile image mode=RGB size=1024x1024>,\n",
+       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=1024x1024>,\n",
+       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=1024x1024>,\n",
+       " <PIL.PngImagePlugin.PngImageFile image mode=RGB size=1024x1024>]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imagenes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir('img')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imagenes[2].save('img/cat.png')"
    ]
   },
   {
