se agregaron comentarios al codigo

--- a/dalle2.ipynb
+++ b/dalle2.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import openai\n",
     "import creds # with my api key\n",
     "import requests\n",
@@ -20,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a request to generate images based on a prompt\n",
     "res_peticion = openai.Image.create(\n",
     "    prompt = \"cat playing inside a box\",\n",
     "    n=4,\n",
@@ -60,6 +62,7 @@
     }
    ],
    "source": [
+    "# Display the request response\n",
     "res_peticion"
    ]
   },
@@ -80,6 +83,7 @@
     }
    ],
    "source": [
+    "# Get the number of generated images\n",
     "len(res_peticion[\"data\"])"
    ]
   },
@@ -89,9 +93,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create lists to store downloaded image URLs and image objects\n",
     "imagenes_url = []\n",
     "imagenes = []\n",
     "\n",
+    "# Iterate through the results and download the images\n",
     "for i in range(0,len(res_peticion[\"data\"])):\n",
     "  imagenes_url.append(requests.get(res_peticion[\"data\"][i][\"url\"]))\n",
     "  imagenes.append(Image.open(BytesIO(imagenes_url[i].content)))"
@@ -114,6 +120,7 @@
     }
    ],
    "source": [
+    "# Check the iteration url\n",
     "imagenes_url"
    ]
   },
@@ -137,6 +144,7 @@
     }
    ],
    "source": [
+    "# Check the iteration imgane objects\n",
     "imagenes"
    ]
   },
@@ -146,6 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the directory img\n",
     "os.mkdir('img')"
    ]
   },
@@ -155,6 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save imagene[2] in directory\n",
     "imagenes[2].save('img/cat.png')"
    ]
   }
