se agregaron comentarios a los notebook de edit y variation

--- a/edit_dalle2.ipynb
+++ b/edit_dalle2.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import openai\n",
     "import creds # with my api key"
    ]
@@ -16,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create an edit request using an image and a mask\n",
     "response = openai.Image.create_edit(\n",
     "  image=open(\"img/monalisa.png\", \"rb\"),\n",
     "  mask=open(\"img/mask.png\", \"rb\"),\n",
@@ -49,15 +51,9 @@
     }
    ],
    "source": [
+    "# Display the response from the edit request\n",
     "response"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
