--- a/variation_dalle2.ipynb
+++ b/variation_dalle2.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a variation request using an image\n",
     "response = openai.Image.create_variation(\n",
     "  image=open(\"img/redpanda.png\", \"rb\"),\n",
     "  n=2,\n",
@@ -50,15 +51,9 @@
     }
    ],
    "source": [
+    "# Display the response from the variation request\n",
     "response"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
