se eliminaron celdas vacias en los archivos edit y variation

--- a/variation_dalle2.ipynb
+++ b/variation_dalle2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,26 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject at 0x2e8549a7350> JSON: {\n",
-       "  \"created\": 1692913861,\n",
+       "<OpenAIObject at 0x2e8564752b0> JSON: {\n",
+       "  \"created\": 1692933448,\n",
        "  \"data\": [\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-lBU7PqRwJ2AgtUWEcGYThTTF.png?st=2023-08-24T20%3A51%3A01Z&se=2023-08-24T22%3A51%3A01Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-24T21%3A24%3A23Z&ske=2023-08-25T21%3A24%3A23Z&sks=b&skv=2021-08-06&sig=JNVEeIhIIGatW69%2BrGb2/VVDvpsRPDVWb7kH4EqKF0E%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-7rcDp22vkLktXQZjHcBKBKOh.png?st=2023-08-25T02%3A17%3A28Z&se=2023-08-25T04%3A17%3A28Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-24T21%3A27%3A22Z&ske=2023-08-25T21%3A27%3A22Z&sks=b&skv=2021-08-06&sig=9UjeAkRtGHPVRcFiQBWHsYHOSn3%2B2xMAlaGHZ4OPaBQ%3D\"\n",
        "    },\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-LQN1UfztwafHhWEtIYK7P9yk.png?st=2023-08-24T20%3A51%3A01Z&se=2023-08-24T22%3A51%3A01Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-24T21%3A24%3A23Z&ske=2023-08-25T21%3A24%3A23Z&sks=b&skv=2021-08-06&sig=CE3FFWhorpDTR49wJBaDbBhYzDug4ilS3MBmubIKIeE%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-WMPNCTn1sxdWxXdCw6eTsQUo.png?st=2023-08-25T02%3A17%3A28Z&se=2023-08-25T04%3A17%3A28Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-24T21%3A27%3A22Z&ske=2023-08-25T21%3A27%3A22Z&sks=b&skv=2021-08-06&sig=/xAmL8XBYdZFUzZishiVOKAB6CEZYDYFZnJ4HmK4rvs%3D\"\n",
        "    }\n",
        "  ]\n",
        "}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
