--- a/edit_dalle2.ipynb
+++ b/edit_dalle2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,23 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject at 0x26176d67710> JSON: {\n",
-       "  \"created\": 1692912079,\n",
+       "<OpenAIObject at 0x26178830f50> JSON: {\n",
+       "  \"created\": 1692933344,\n",
        "  \"data\": [\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-TMBs0MxRrhu5eeMlZeGcR0m5.png?st=2023-08-24T20%3A21%3A19Z&se=2023-08-24T22%3A21%3A19Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-24T19%3A01%3A11Z&ske=2023-08-25T19%3A01%3A11Z&sks=b&skv=2021-08-06&sig=dSQ%2BrDCenFpsoSMRMGaI74col5/jPnMYHMidIHVr/mg%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-sdnuwSIiD9J9vO2QVw6FyagF/user-JXuYyzn3B0gB0fDTgTrFZskI/img-P4xBW9vulFwcbzrx3RMwYl7T.png?st=2023-08-25T02%3A15%3A44Z&se=2023-08-25T04%3A15%3A44Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-08-24T21%3A29%3A39Z&ske=2023-08-25T21%3A29%3A39Z&sks=b&skv=2021-08-06&sig=QJjAxMfRqgqJ/UMGTN8cK8n4DqgwIYzfXEOwKo0p8VQ%3D\"\n",
        "    }\n",
        "  ]\n",
        "}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
